Apache ManifoldCF Plugin for Elastic Search change Log
$Id$

======================= 2.1-SNAPSHOT =====================

CONNECTORS-1228: Fix default values so they are correct.

======================= Release 2.0 =====================

Initial commit.
(Karl Wright, on behalf of Bartłomiej Superson)